--- a/index.html
+++ b/index.html
@@ -4,7 +4,44 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- HTML Meta Tags -->
+    <title>PhsarKhmer</title>
+    <meta name="description" content="Welcome To Phsar Khmer" />
+
+    <!-- Facebook Meta Tags -->
+    <meta
+      property="og:url"
+      content="https://vercel.com/taing-sengkims-projects/react-js-zodx-rtk-query-secure-storage-crud/FKyL4CUWu83VQmiNtRK2VSQbtEMm"
+    />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:title"
+      content="react-js-zodx-rtk-query-secure-storage-crud - Deployment Overview – Vercel"
+    />
+    <meta property="og:description" content="Welcome To Phsar Khmer" />
+    <meta
+      property="og:image"
+      content="https://opengraph.b-cdn.net/production/images/48014a22-06a1-4d58-b497-8f3f2dbe55d6.jpg?token=7kojnMNQq-cJS4ELp2CsEVm4NpRd1zlDPUufb65kIfQ&height=205&width=474&expires=33291158889"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="vercel.com" />
+    <meta
+      property="twitter:url"
+      content="https://vercel.com/taing-sengkims-projects/react-js-zodx-rtk-query-secure-storage-crud/FKyL4CUWu83VQmiNtRK2VSQbtEMm"
+    />
+    <meta
+      name="twitter:title"
+      content="react-js-zodx-rtk-query-secure-storage-crud - Deployment Overview – Vercel"
+    />
+    <meta name="twitter:description" content="Welcome To Phsar Khmer" />
+    <meta
+      name="twitter:image"
+      content="https://opengraph.b-cdn.net/production/images/48014a22-06a1-4d58-b497-8f3f2dbe55d6.jpg?token=7kojnMNQq-cJS4ELp2CsEVm4NpRd1zlDPUufb65kIfQ&height=205&width=474&expires=33291158889"
+    />
+
+    <!-- Meta Tags Generated via https://www.opengraph.xyz -->
   </head>
   <body>
     <div id="root"></div>
