change projexct name

--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- HTML Meta Tags -->
-    <title>PhsarKhmer</title>
+    <title>Phsar Khmer</title>
     <meta name="description" content="Welcome To Phsar Khmer" />
 
     <!-- Facebook Meta Tags -->
-    <meta
-      property="og:url"
-      content="https://vercel.com/taing-sengkims-projects/react-js-zodx-rtk-query-secure-storage-crud/FKyL4CUWu83VQmiNtRK2VSQbtEMm"
-    />
+    <meta property="og:url" content="https://phsar-khmer-xy5n.vercel.app/" />
     <meta property="og:type" content="website" />
     <meta
       property="og:title"
@@ -26,10 +23,10 @@
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta property="twitter:domain" content="vercel.com" />
+    <meta property="twitter:domain" content="phsar-khmer-xy5n.vercel.app" />
     <meta
       property="twitter:url"
-      content="https://vercel.com/taing-sengkims-projects/react-js-zodx-rtk-query-secure-storage-crud/FKyL4CUWu83VQmiNtRK2VSQbtEMm"
+      content="https://phsar-khmer-xy5n.vercel.app/"
     />
     <meta
       name="twitter:title"
